--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body>
     <logo>
         <!--logoはimageフォルダのlogo.pngを使用している。自分のロゴや写真を載せるとわかりやすい-->
-        <img src="https://github.com/sawlargelow/doyolab/blob/master/7007.JPG?raw=true" alt="7007.JPG"> <br>
+        <img src="images/7007.JPG" alt="7007.JPG"> <br>
         <figcaption>KIHARlab</figcaption>
     </logo>
     <br><br><!--brは改行-->
     <!--毎週この部分をコピペして追加してく-->
      <figure>
-        <a href="wowow.html"><img src="https://github.com/sawlargelow/doyolab/blob/master/0.JPG?raw=true" alt=""></a>
+        <a href="wowow.html"><img src="images/0.JPG" alt=""></a>
         <figcaption>キックオフ!</figcaption>
     </figure>
      <!-------------------------------->
 　　　<figure>
-        <a href="wowow2.html"><img src="https://github.com/sawlargelow/doyolab/blob/master/100.JPG?raw=true" alt=""></a>
+        <a href="wowow2.html"><img src="images/100.JPG" alt=""></a>
         <figcaption>どう進めるか</figcaption>
     </figure>
      <!-------------------------------->
