--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
     </figure>
      <!-------------------------------->
      <figure>
-        <a href="wowow3.html"><img src="https://github.com/sawlargelow/doyolab/blob/master/300.JPG?raw=true" alt=""></a>
+        <a href="wowow3.html"><img src="images/300.JPG" alt=""></a>
         <figcaption>商品開発において</figcaption>
     </figure>
      <!-------------------------------->
      <figure>
-        <a href="wowow4.html"><img src="https://github.com/sawlargelow/doyolab/blob/master/500.JPG?raw=true" alt=""></a>
+        <a href="wowow4.html"><img src="images/500.JPG" alt=""></a>
         <figcaption>商品開発</figcaption>
     </figure>
     <!-------------------------------->
      <figure>
-        <a href="wowow5.html"><img src="https://github.com/sawlargelow/doyolab/blob/master/700.JPG?raw=true" alt=""></a>
+        <a href="wowow5.html"><img src="images/700.JPG" alt=""></a>
         <figcaption>プロトタイプ</figcaption>
     </figure>
     <!-------------------------------->
      <figure>
-        <a href="wowow6.html"><img src="https://github.com/sawlargelow/doyolab/blob/master/923.JPG?raw=true" alt=""></a>
+        <a href="wowow6.html"><img src="images/923.JPG" alt=""></a>
         <figcaption>3Dアバターの作成、動作</figcaption>
     </figure>
     <!-------------------------------->
      <figure>
-        <a href="wowow7.html"><img src="https://github.com/sawlargelow/doyolab/blob/master/7002.JPG?raw=true" alt=""></a>
+        <a href="wowow7.html"><img src="images/7002.JPG" alt=""></a>
         <figcaption>3Dアバターの作成、動作ver.2</figcaption>
     </figure>
     
