--- a/wowow3.html
+++ b/wowow3.html
@@ -15,7 +15,7 @@
         <p>
             　道用先生が商品開発において必要なことを分かりやすく図にしたものを、改めて自身の手で図にした。
         
-            <image src="https://github.com/sawlargelow/doyolab/blob/master/doyosetsumei.JPEG?raw=true"></image><br>
+            <image src="images/doyosetsumei.JPEG" alt""></image><br>
 
         </p>
 
