--- a/wowow4.html
+++ b/wowow4.html
@@ -19,7 +19,7 @@
          　そんなこと考えていると、ふとアイツの存在が脳裏を横切った。<br>
     　　</p>
     <p><a href="wowow4.html">
-        <image src="https://github.com/sawlargelow/doyolab/blob/master/pp3.png?raw=true"></image></a>
+        <image src="images/pp3.png" alt""></image></a>
     </p>
 
     <p>      上の画像は、アルバイトでの梱包作業、自宅に届く配送物に使用されるPPバンド<br></p>
@@ -31,7 +31,7 @@
             　理由としては、私の皮膚は一般人と比べ薄くて弱い。なので、私や同じような苦しみを味わっている人々からの解決策を考えた。それがこれだ。<br>
     </p>
           <p>  <a href="wowow4.html">
-              <image src="https://github.com/sawlargelow/doyolab/blob/master/pp1.png?raw=true"></image></a>
+              <image src="images/pp1.png" alt""></image></a>
     </p>
 　　　　　
             <p>  ホチキスで綴じたときの芯の形をイメージしてもらうと分かりやすいだろう。<br>
