--- a/wowow5.html
+++ b/wowow5.html
@@ -18,7 +18,7 @@
          　最終目標はダンスができる3Dデータの作成であるが、一発目からそれはきついので上半身が動くデータを作成する。<br>
     　　</p>
     <p>
-        <image src="https://github.com/sawlargelow/doyolab/blob/master/seesaw.png?raw=true"></image><br>
+        <image src="images/seesaw.png" alt""></image><br>
     </p>
     　 <h2>私が考えた3Dキャラクター</h2>
         <p>
