--- a/wowow7.html
+++ b/wowow7.html
@@ -22,10 +22,10 @@
             <image src="images/2020093001.png" alt""></image><br>
             　デザインしてみたが何度やっても上手くいかない。
             どうしても頭上部分が円形に点が配置されているのでデザインの邪魔をする。<br>
-            <image src="https://github.com/sawlargelow/doyolab/blob/master/2020093002.png?raw=true"></image><br>
+            <image src="images/2020093002.png" alt""></image><br>
             　なので、頭上を膨らませて対応した。<br>
             　それと、お顔部分をもっとはっきりさせておくべきだったなと思った。<br>
-            <image src="https://github.com/sawlargelow/doyolab/blob/master/2020093003.png?raw=true"></image><br>
+            <image src="images/2020093003.png" alt""></image><br>
     
               身体は短くさせることによって相手に変な圧をかけないよう配慮した結果だ。<br>
             　八頭身にするなら、優し気なデザインにするべきだろう。<br>
