--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
     </figure>
     <!-------------------------------->
      <figure>
-        <a href="wowow7.html"><img src="images/7002.JPG" alt=""></a>
-        <figcaption>3Dアバターの作成、動作ver.2</figcaption>
+        <a href="wowow7.html"><img src="images/n700.png" alt=""></a>
+        <figcaption>3Dアバターの作成Vol.2</figcaption>
+    </figure>
+    <!-------------------------------->
+    <figure>
+        <a href="wowow8.html"><img src="images/n700s.JPG" alt=""></a>
+        <figcaption>3Dアバターの作成Vol.3</figcaption>
     </figure>
     
 </body>
