--- a/wowow4.html
+++ b/wowow4.html
@@ -11,7 +11,7 @@
 
 <body1>
     <!--ホームに帰るためのボタン-->
-        <h1>商品開発vol.1</h1>
+        <h1>商品開発Vol.1</h1>
         <p>
             　自身の周りで何か不便なことといえば・・・<br>
             　左利きだから世に存在する右利き用のハサミ、カッター等が使いづらい。<br>
